--- a/IDE/Vdom/vdom/components/searchResult/SearchResult.mxml
+++ b/IDE/Vdom/vdom/components/searchResult/SearchResult.mxml
@@ -11,8 +11,9 @@
 		<mx:Button label="Expand All" cornerRadius="0" click="expandAll();"/>
 		<mx:Button label="Collapse All" cornerRadius="0" click="collapseAll();"/>
 		<mx:Button label="Go to Editor" cornerRadius="0" click="goToEdit();"/>
+		<mx:Button label="Clear" cornerRadius="0" click="clear();"/>
 	</mx:HBox>
-	<mx:Label fontSize="14" fontWeight="bold" id="applicationName"/>
+	<mx:Label fontSize="14" fontWeight="bold" id="applicationName" text="{_applicationName}"/>
 	<containers:SearchDataGrid id="searchDataGrid" 
 		showHeaders="false" sortableColumns="false" width="100%" height="100%" borderStyle="none" backgroundAlpha="0.0"
 		folderClosedIcon="{null}"
