git-svn-id: http://svn.vdombox.ru/flextools/trunk@2037 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -51,6 +51,6 @@
 			
 		</containers:ClosablePanel>
 		
-		<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" height="100%" /> 							
+		<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" /> 							
 	</mx:VBox>
 </mx:HDividedBox>
