--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -87,7 +87,7 @@
 		<mx:Canvas id="__message">
 			<mx:HBox width="100%" height="24" verticalAlign="middle" horizontalAlign="center">
 				<mx:Label id="__msgText" text="{alertMessage}" fontWeight="bold" color="#FF0000" />
-				<mx:Button id="__msgOkBtn" label="Yes" height="18" click="{messageOkClickHandler();}" />
+				<mx:Button id="__msgOkBtn" label="Ok" height="18" click="{messageOkClickHandler();}" />
 			</mx:HBox> 					
 		</mx:Canvas>
 	</mx:ViewStack>
