--- a/DB/DataEditor/v.01/dbDataEditor.mxml
+++ b/DB/DataEditor/v.01/dbDataEditor.mxml
@@ -4,7 +4,8 @@
 	width="640" height="480"
 	paddingBottom="10" paddingRight="10" paddingLeft="10" paddingTop="10"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
-	verticalGap="2" horizontalGap="0" backgroundAlpha="1" backgroundColor="#FFFFFF">
+	verticalGap="2" horizontalGap="0" backgroundAlpha="1" backgroundColor="#FFFFFF"
+	creationComplete="{trace('Debugger connected!');}">
 
 	<!-- Main Class Scripting File -->	
 	<mx:Script source="dbDataEditor_s.as" />
