git-svn-id: http://svn.vdombox.ru/flextools/trunk@2081 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -50,7 +50,7 @@
 					<mx:CheckBox id="__aIncrement" enabled="false" />
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
-					<mx:Label text="Can be null:" width="100" />
+					<mx:Label text="Not Null:" width="100" />
 					<mx:CheckBox id="__null" enabled="false" />
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
