--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/GenConnection.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/GenConnection.mxml
@@ -6,7 +6,7 @@
 	xmlns:controls="ExtendedAPI.com.controls.*" 
 	title="{LanguageManager.sentences.connection}"
 	modal="true"
-	width="450" height="200"
+	width="450" height="300"
 	creationComplete="onShow()">
 	
 	<mx:Script>
@@ -30,7 +30,9 @@
 					
 					var defaultCaptions:Object = {
 						hlp_host: "Host...",
-						hlp_port: "Port..."
+						hlp_port: "Port...",
+						hlp_login: "Login...",
+						hlp_password: "Password..."
 					};
 					
 					LanguageManager.setSentences(defaultCaptions);								
@@ -49,6 +51,8 @@
             	{
             		ContextManager.instance.host = StringUtil.trim(txtHost.text);
             		ContextManager.instance.port = StringUtil.trim(txtPort.text)
+            		ContextManager.instance.login = StringUtil.trim(txtLogin.text);
+            		ContextManager.instance.pass = StringUtil.trim(txtPass.text)
             	}
 			}
 			
@@ -68,6 +72,7 @@
 		
 	<mx:VBox styleName="dlgContent" height="100%">
 		<mx:Grid>
+		
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%">
 					<mx:Label text="{LanguageManager.sentences.host}:"/>
@@ -78,6 +83,7 @@
 						toolTip="{LanguageManager.sentences.hlp_host}"/>
 				</mx:GridItem>
 			</mx:GridRow>
+			
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%">
 					<mx:Label text="{LanguageManager.sentences.port}:"/>
@@ -87,7 +93,30 @@
 					<control:HelpTip
 						toolTip="{LanguageManager.sentences.hlp_port}"/>
 				</mx:GridItem>
-			</mx:GridRow>			
+			</mx:GridRow>
+						
+			<mx:GridRow width="100%" height="100%">
+				<mx:GridItem width="100%" height="100%">
+					<mx:Label text="{LanguageManager.sentences.login}:"/>
+				</mx:GridItem>
+				<mx:GridItem width="100%" height="100%">
+					<mx:TextInput id="txtLogin" text="{ContextManager.instance.login}" width="300"/>
+					<control:HelpTip
+						toolTip="{LanguageManager.sentences.hlp_login}"/>
+				</mx:GridItem>
+			</mx:GridRow>
+
+			<mx:GridRow width="100%" height="100%">
+				<mx:GridItem width="100%" height="100%">
+					<mx:Label text="{LanguageManager.sentences.password}:"/>
+				</mx:GridItem>
+				<mx:GridItem width="100%" height="100%">
+					<mx:TextInput id="txtPass" text="{ContextManager.instance.pass}" displayAsPassword="true" width="300"/>
+					<control:HelpTip
+						toolTip="{LanguageManager.sentences.hlp_password}"/>
+				</mx:GridItem>
+			</mx:GridRow>
+			
 		</mx:Grid>
 	</mx:VBox>	
 
