--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -34,6 +34,7 @@
 				none:"none",
 				lbl_new:"New",
 				lbl_rename:"Rename",
+				lbl_copy:"Copy",
 				lbl_delete:"Delete",
 				lbl_help:"Help",
 				initial_graph:"Initial graph:",
@@ -87,6 +88,7 @@
 				
 				btnNew.addEventListener(MouseEvent.CLICK, btnNewClickHandler);	
 				btnRename.addEventListener(MouseEvent.CLICK, btnRenameClickHandler);	
+				btnCopy.addEventListener(MouseEvent.CLICK, btnCopyClickHandler);	
 				btnDelete.addEventListener(MouseEvent.CLICK, btnDeleteClickHandler);	
 				btnHelp.addEventListener(MouseEvent.CLICK, btnHelpClickHandler);	
 				
@@ -394,7 +396,35 @@
 				curTab.lstGraphs.editable = true;
 				curTab.lstGraphs.editedItemPosition = {rowIndex: curTab.lstGraphs.selectedIndex, columnIndex: 0};
 			}	
-					
+			
+			private function btnCopyClickHandler(event:MouseEvent):void
+			{
+				var child:AccordionChild = AccordionChild(graphsAccordion.selectedChild);
+				
+				if(!curGraph)
+					return;
+				
+				var newGraph:GraphCanvas = curGraph.clone();
+									
+				newGraph.name = "Copy_Of_" + curGraph.name;
+				newGraph.label = newGraph.name;
+				newGraph.initial = false;
+
+				initGraphs.addItem(newGraph);
+				child.graphs.addItem(newGraph);										
+				vsViewStack.addChild(newGraph);				
+				
+				child.graphs.refresh();
+				
+				selectGraph(newGraph);
+				
+				child.lstGraphs.validateNow();
+				child.lstGraphs.scrollToIndex(child.graphs.getItemIndex(newGraph));
+				
+				child.lstGraphs.editable = true; 
+				child.lstGraphs.editedItemPosition = {rowIndex: child.lstGraphs.selectedIndex, columnIndex: 0};
+			}
+								
 			private function btnDeleteClickHandler(event:MouseEvent):void
 			{
 				if(!curGraph)
@@ -447,6 +477,7 @@
 			<mx:ControlBar paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" horizontalGap="1" width="100%" horizontalAlign="center" id="ctrlBar">
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_new}" labelPlacement="bottom" fontFamily="Arial" textAlign="center" cornerRadius="3" alpha="0.9" id="btnNew" width="100%" paddingRight="0" paddingLeft="0" fontSize="9" icon="{ContextManager.addClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_rename}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnRename" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.editClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
+				<mx:Button toolTip="{LanguageManager.sentences.lbl_copy}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnCopy" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.copyClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_delete}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnDelete" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.deleteClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_help}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnHelp" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.helpClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 			</mx:ControlBar>
