--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -37,8 +37,8 @@
 				lbl_copy:"Copy",
 				lbl_delete:"Delete",
 				lbl_help:"Help",
-				initial_graph:"Initial graph:",
-				graphs_title:"VDOM Application"
+				initial_graph:"Initial Graph",
+				graph_explorer:"Graph Explorer"
 			}
 			
 			static private var _classConstructed:Boolean = classConstruct(); 
@@ -470,7 +470,7 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Panel width="100%" height="100%" layout="absolute" title="{LanguageManager.sentences.graphs_title}">
+	<mx:Panel width="100%" height="100%" layout="absolute" title="{LanguageManager.sentences.graph_explorer}">
 				
 		<mx:VBox width="100%" height="100%" verticalGap="0">
 		
@@ -479,7 +479,8 @@
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_rename}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnRename" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.editClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_copy}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnCopy" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.copyClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
 				<mx:Button toolTip="{LanguageManager.sentences.lbl_delete}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnDelete" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.deleteClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_help}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnHelp" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.helpClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
+				<mx:Button toolTip="{LanguageManager.sentences.lbl_help}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnHelp" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.helpClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"
+					visible="false" includeInLayout="false"/>
 			</mx:ControlBar>
 			
 			<mx:Accordion 
