--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/NodeValue.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/NodeValue.mxml
@@ -12,7 +12,7 @@
 			import PowerPack.com.managers.LanguageManager;
 			
 			static private var defaultCaptions:Object = {
-				node_value_title:"State value"
+				node_value_title:"State Value"
 			}
 			
 			static private var _classConstructed:Boolean = classConstruct(); 
