git-svn-id: http://svn.vdombox.ru/flextools/trunk@2106 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/_src/theme/css/applicationManagment.css
+++ b/IDE/Vdom/_src/theme/css/applicationManagment.css
@@ -36,3 +36,9 @@ ActionPanel {
 	fontFamily: Verdana;
 	textAlign: center;
 }
+Thumbnail {
+	
+	thumbBackground: Embed(source="vdomTheme.swf", symbol="ThumbBackground");
+	thumbBackgroundSelected: Embed(source="vdomTheme.swf", symbol="ThumbBackgroundSelected");
+	backgroundSize: "100%";
+}
