--- a/IDE/Vdom/vdom/components/editApplication/EditApplication.mxml
+++ b/IDE/Vdom/vdom/components/editApplication/EditApplication.mxml
@@ -7,5 +7,23 @@
 	
 	<mx:Script source="includes/editApplication.as" />
 	
-	<applicationEditor:ApplicationEditor id="applicationEditor" horizontalCenter="0"/>
+	<mx:Style>
+		.zzz {
+			titleBackgroundSkin: Embed(source="vdomTheme.swf",symbol="PanelTitleBackground");
+			backgroundSize: "100%";	
+		}
+		.titleNamez {
+			textAlign: "center";
+			fontWeight: "bold";			
+		}
+	</mx:Style>
+	<mx:Panel 
+		title="EDIT APPLICATION"
+		
+		cornerRadius="0" styleName="zzz" titleStyleName="titleNamez"
+		borderAlpha="1"
+		color="#FFFFFF" left="15" top="15" width="500" height="400" shadowDirection="right" layout="absolute">
+		
+		<applicationEditor:ApplicationEditor id="applicationEditor" left="20" top="20"/>
+	</mx:Panel>
 </mx:Canvas>
