--- a/IDE/Vdom/vdom/components/searchResult/SearchResult.mxml
+++ b/IDE/Vdom/vdom/components/searchResult/SearchResult.mxml
@@ -1,29 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox
+<mx:Canvas
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:containers="vdom.containers.*"
-	
-	show="showHandler();" >
+	show="showHandler();" xmlns:controls="vdom.controls.*" xmlns:containers="vdom.containers.*">
 	
 	<mx:Script source="includes/searchResult.as" />
-	<mx:HBox width="100%"
-		paddingTop="5" paddingBottom="5" paddingLeft="5" paddingRight="5">
-		<mx:Button label="Expand All" cornerRadius="0" click="expandAll();"/>
-		<mx:Button label="Collapse All" cornerRadius="0" click="collapseAll();"/>
-		<mx:Button label="Go to Editor" cornerRadius="0" click="goToEdit();"/>
-		<mx:Button label="Clear" cornerRadius="0" click="clear();"/>
-	</mx:HBox>
-	<mx:Label fontSize="14" fontWeight="bold" id="applicationName" text="{_applicationName}"/>
-	<containers:SearchDataGrid id="searchDataGrid" 
-		showHeaders="false" sortableColumns="false" width="100%" height="100%" borderStyle="none" backgroundAlpha="0.0"
-		folderClosedIcon="{null}"
-		folderOpenIcon="{null}"
-		defaultLeafIcon="{null}"
-		verticalSeparatorSkin="{null}"
-		selectionMode="singleRow">
-		<containers:columns>
-			<mx:AdvancedDataGridColumn dataField="" width="30"/>
-			<mx:AdvancedDataGridColumn dataField="@Name"/>
-		</containers:columns>
-	</containers:SearchDataGrid>
-</mx:VBox>
+	
+	<mx:Style>
+		.zzz {
+			titleBackgroundSkin: Embed(source="vdomTheme.swf",symbol="PanelTitleBackground");
+			backgroundSize: "100%";	
+		}
+		.bg {
+			backgroundImage: Embed(source="vdomTheme.swf",symbol="PanelTitleBackground");
+			backgroundSize: "100%";	
+		}
+		
+		.sd {
+			color: #FFFFFF;
+		}
+		.titleNamez {
+			color: #FFFFFF;
+			
+			textAlign: "center";
+			fontWeight: "bold";			
+		}
+		.buttonStyle {
+			
+			color: #000000;
+			textRollOverColor: #FFFFFF;
+			disabledColor: #92BB47;
+			
+			upSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			overSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			downSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			disabledSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+		
+			selectedUpSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			selectedOverSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			selectedDownSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+			selectedDisabledSkin: Embed(source="vdomTheme.swf", symbol="ButtonBackgroundImage");
+		}
+		.invBtn {
+			color: #BBBBBB;
+			textRollOverColor: #FFFFFF;
+			fillAlphas: 0.0, 0.0, 0.0, 0.0; 
+			borderStyle: "none";
+			borderAlpha: .0;
+		}
+	</mx:Style>
+	<mx:Panel 
+		title="SEARCH RESULT"
+		cornerRadius="0" styleName="zzz" titleStyleName="titleNamez"
+		borderAlpha="1" color="#FFFFFF"
+		left="15" top="15" width="500" height="400" shadowDirection="right" layout="absolute">
+		<mx:VBox 
+			backgroundColor="#C2C2C2" color="#000000"
+			left="20" top="20" height="320" borderStyle="solid" borderColor="#C2C2C2">
+			<mx:HBox width="100%" styleName="bg">
+				<mx:Button styleName="invBtn" label="Expand All" cornerRadius="0" click="expandAll();"   alpha="0.0"/>
+				<mx:Button styleName="invBtn" label="Collapse All" cornerRadius="0" click="collapseAll();" alpha="0.0"/>
+				<mx:Button styleName="invBtn" label="Go to Editor" cornerRadius="0" click="goToEdit();" alpha="0.0"/>
+				<mx:Button styleName="invBtn" label="Clear" cornerRadius="0" click="clear();" alpha="0.0"/>
+			</mx:HBox>
+			<mx:HBox>
+				<mx:Label fontSize="14" fontWeight="bold" text="Application Name:"/>
+				<mx:Label fontSize="14" fontWeight="bold" id="applicationName" text="{_applicationName}"/>
+			</mx:HBox>
+			<containers:SearchDataGrid id="searchDataGrid" selectedIndex="0"
+				showHeaders="false" sortableColumns="false" width="100%" height="100%" borderStyle="none" backgroundAlpha="0.0"
+				folderClosedIcon="{null}"
+				folderOpenIcon="{null}"
+				defaultLeafIcon="{null}"
+				verticalSeparatorSkin="{null}"
+				selectionMode="singleRow">
+				<containers:columns>
+					<mx:AdvancedDataGridColumn dataField="" width="30"/>
+					<mx:AdvancedDataGridColumn dataField="@Name"/>
+				</containers:columns>
+			</containers:SearchDataGrid>
+		</mx:VBox>
+	</mx:Panel>
+</mx:Canvas>
