--- a/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
@@ -2,7 +2,9 @@
 <ActionPanel
 	
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns="vdom.containers.*">
+	xmlns="vdom.containers.*"
+	borderThicknessLeft="0" borderThicknessRight="0" borderThicknessTop="0" borderThicknessBottom="0"
+	layout="absolute">
 	
 	<mx:Metadata>
 		[Event(name="applicationChanged", type="mx.events.ListEvent")]
@@ -17,6 +19,7 @@
 		
 		private var oldXMLList:XMLList;
 		private var _dataProvider:XMLListCollection;
+		private var selectedRenderer:Thumbnail;
 		
 		private var _applicationId:String;
 		
@@ -27,6 +30,7 @@
 			
 			oldXMLList = value;
 			_applicationTitleList.dataProvider = _dataProvider = new XMLListCollection(value);
+			_applicationTitleList.validateNow();
 			_applicationTitleList.selectedIndex = 0;
 		
 			switchSelection(value[0].@ID);
@@ -53,29 +57,55 @@
 		
 		private function switchSelection(value:String):void
 		{
+			if(selectedRenderer)
+				selectedRenderer.selected = false;
+						
 			var currentElement:XML = oldXMLList.(@ID == value)[0];
 			var index:int = _dataProvider.getItemIndex(currentElement);
-			
-			if(_applicationTitleList.selectedIndex == index)
-				return;
 			
 			_applicationTitleList.selectedIndex = index;
 			_applicationTitleList.scrollToIndex(index);
 			
 			_applicationId = value;
+			
+			selectedRenderer = Thumbnail(_applicationTitleList.indexToItemRenderer(_applicationTitleList.selectedIndex));
+			
+			if(selectedRenderer && XML(selectedRenderer.data).@ID == value)
+				selectedRenderer.selected = true;
 		}
 		
-		private function changeListEvent():void
+		private function changeListEvent(event:ListEvent):void
 		{	
+			
 			var evt:ListEvent = new ListEvent('applicationChanged');
 			dispatchEvent(evt);
+		}
+		
+		private function sss():void
+		{
+			
+			if(selectedRenderer)
+				selectedRenderer.selected = false;
+			
+			callLater(ddd);
+		}
+		
+		private function ddd():void
+		{
+			selectedRenderer = Thumbnail(_applicationTitleList.indexToItemRenderer(_applicationTitleList.selectedIndex));
+			
+			if(selectedRenderer && XML(selectedRenderer.data).@ID == applicationId)
+				selectedRenderer.selected = true;
 		}
 		
 	]]>
 	</mx:Script>
 	<mx:TileList id="_applicationTitleList"
-		selectedIndex="0" change="changeListEvent()" 
-		verticalScrollPolicy="auto" paddingRight="15" paddingLeft="5"
-		itemRenderer="vdom.containers.Thumbnail" rowCount="1" direction="horizontal" columnCount="4"
-		backgroundColor="#808080"/>	
+		selectionColor="#777777"
+		borderThickness="0"
+		width="100%"
+		change="changeListEvent(event)"
+		verticalScrollPolicy="auto"
+		itemRenderer="vdom.containers.Thumbnail" rowCount="1" direction="horizontal" columnCount="4" scroll="{sss()}"
+		backgroundColor="#808080" backgroundAlpha="0" allowMultipleSelection="false" textAlign="right" height="70"/>	
 </ActionPanel>
