--- a/IDE/Vdom/vdom/containers/Thumbnail.mxml
+++ b/IDE/Vdom/vdom/containers/Thumbnail.mxml
@@ -1,11 +1,10 @@
 <?xml version="1.0"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" 
-	horizontalAlign="center" 
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" 
 	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
-	verticalGap="0" horizontalGap="0">
-	
+	initialize="initalizeHandler();">
 	<mx:Script>
 		<![CDATA[
+			import mx.controls.TileList;
 			import vdom.managers.FileManager;
 			import mx.core.Application;
 			[Bindable]
@@ -14,12 +13,28 @@
 			[Bindable]
 			private var _source:Object;
 			
+			private var _selected:Boolean = false;
+			
+			public function set selected(value:Boolean):void
+			{
+				if(value)
+				{
+					cnv.setStyle("backgroundImage", getStyle("thumbBackgroundSelected"));
+				}
+				else
+				{
+					cnv.setStyle("backgroundImage", getStyle("thumbBackground"));
+				}
+			} 
+			
 			override public function set data(value:Object):void {
 				
 				super.data = value;
+				
 				labelValue = value.@Name;
+				
 				if(value.@IconID == '')
-					_source = Application.application.getStyle('appIconFile');
+					_source = Application.application.getStyle('appIconPersonalPages');
 				else {
 					
 					var fileManager:FileManager = FileManager.getInstance();
@@ -31,9 +46,15 @@
 				
 				_source = value;
 			}
+			
+			private function initalizeHandler():void
+			{
+				cnv.setStyle("backgroundImage", getStyle("thumbBackground"));
+			}
 		]]>
 	</mx:Script>
-	
-	<mx:Image id="img" width="50" height="50" source="{_source}" toolTip="{labelValue}"/>
-</mx:VBox>
+	<mx:Canvas id="cnv" width="60" height="60"  horizontalCenter="0" verticalCenter="0">
+		<mx:Image source="{_source}" width="55" height="55" horizontalCenter="0" verticalCenter="0" scaleContent="true"/>
+	</mx:Canvas>
+</mx:Canvas>
 
