--- a/IDE/Vdom/vdom/containers/searchPanel.mxml
+++ b/IDE/Vdom/vdom/containers/searchPanel.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ActionPanel xmlns="vdom.containers.*" xmlns:mx="http://www.adobe.com/2006/mxml">
+<ActionPanel xmlns="vdom.containers.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="250">
 <mx:Script>
 	<![CDATA[
 		import vdom.events.SearchPanelEvent;
@@ -40,11 +40,11 @@
 </mx:Script>
 <mx:HBox width="100%">
 	<mx:VBox horizontalAlign="left" verticalGap="4" width="100%">
-		<mx:TextInput id="searchField"/>
+		<mx:TextInput id="searchField" width="160"/>
 		<mx:ComboBox id="applicationList"
 			dataProvider="{_listApplication}"
 			labelField="@Name"
-			cornerRadius="0"/>
+			cornerRadius="0" width="160"/>
 	</mx:VBox>
 	<mx:Button label="Find" height="50" cornerRadius="0" click="search();"/>
 </mx:HBox>
