--- a/IDE/Vdom/vdom/controls/ImageChooser.mxml
+++ b/IDE/Vdom/vdom/controls/ImageChooser.mxml
@@ -10,9 +10,12 @@
 	 width="350" showCloseButton="true"
 	
 	close="closeHandler(false);"
-	add="addedHandler();">
+	add="addedHandler();" borderColor="#000000" titleStyleName="titleStyle">
 
 <mx:Style>
+	.titleStyle {
+		color: #FFFFFF;
+	}
 	.imageChooser {
 		backgroundColor:#FFFFFF;
 		cornerRadius:0px;
@@ -32,12 +35,14 @@
 		
 		[Bindable]
 		private var listArray:Array = [
-			{source:'appIconFile', imageName:'File'}, {source:'appIconBook', imageName:'Book'},
-			{source:'appIconBooks', imageName:'Books'}, {source:'appIconCommunicate', imageName:'Communicate'},
-			{source:'appIconCubes', imageName:'Cubes'}, {source:'appIconDiagram', imageName:'Diagram'},
-			{source:'appIconHost', imageName:'Host'}, {source:'appIconMolecule', imageName:'File'},
-			{source:'appIconOrder', imageName:'File'}, {source:'appIconPen', imageName:'File'},
-			{source:'appIconSetting', imageName:'File'}, {source:'appIconShoppingl', imageName:'File'}
+			{source:'appIconPersonalPages', imageName:'personalpages'}, {source:'appIconAssociation', imageName:'association'},
+			{source:'appIconBuild', imageName:'build'}, {source:'appIconComputer', imageName:'computer'},
+			{source:'appIconCulture', imageName:'culture'}, {source:'appIconEducation', imageName:'education'},
+			{source:'appIconElectronic', imageName:'electronic'}, {source:'appIconFashion', imageName:'fashion'},
+			{source:'appIconHealth', imageName:'health'}, {source:'appIconHotels', imageName:'hotels'},
+			{source:'appIconHousing', imageName:'housing'}, {source:'appIconRestaurant', imageName:'restaurant'},
+			{source:'appIconSport', imageName:'sport'}, {source:'appIconStoreShop', imageName:'storeshop'},
+			{source:'appIconTransportation', imageName:'transportation'}
 		]
 		
 		private var _selectedImage:ByteArray;
@@ -59,7 +64,7 @@
 		
 		private function addedHandler():void 
 		{
-			var iconClass:Class = Application.application.getStyle('appIconFile');
+			var iconClass:Class = Application.application.getStyle('appIconPersonalPages');
 			var ba:BitmapAsset = new iconClass();
 			var pnge:PNGEncoder = new PNGEncoder();
 			_selectedImage = pnge.encode(ba.bitmapData);
