fixed same errors in TreeEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2109 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -429,7 +429,15 @@
 	}
 	]]>
 </mx:Script>
-
+<!--
+	<mx:ComboBox x="28" y="46" >
+	 <mx:ArrayCollection>
+         <mx:String>1</mx:String>
+         <mx:String>2</mx:String>
+         <mx:String>3</mx:String>
+      </mx:ArrayCollection>
+	</mx:ComboBox>
+-->
 </mx:Canvas>
 
 <mx:VBox   height="100%" >
