git-svn-id: http://svn.vdombox.ru/flextools/trunk@2120 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -34,8 +34,8 @@
 		</containers:AdvancedTabNavigator>
 	
 	<mx:VBox id="panelContainer"
+		paddingRight="2" width="220" minWidth="220"
 		verticalGap="5" 
-		width="200" minWidth="200" minHeight="0" 
 		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
 		
 		<editContainers:AttributesPanel id="attributesPanel"
