--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -26,7 +26,7 @@
 		paddingTop="7" paddingBottom="7" paddingLeft="7" paddingRight="7"
 		dropShadowEnabled="true"
 		horizontalAlign="left" verticalAlign="middle"
-		horizontalGap="5" borderStyle="solid" borderColor="#000000">
+		horizontalGap="5" borderStyle="solid" borderColor="#000000" verticalScrollPolicy="off">
 		
 		<controls:ActionButton styleName="editionButton"
 			label="{resourceManager.getString('Application','editor_edition')}"
@@ -55,14 +55,14 @@
 			labelPlacement="bottom"
 			click="{placeCanvas.selectedChild=eventCanv}"/>
 		
-		<controls:ActionButton styleName="analyseButton"
+		<!--<controls:ActionButton styleName="analyseButton"
 			label="Debug"
 			labelPlacement="bottom"
 			click="{placeCanvas.selectedChild=analyseCanv}"/>
 		
 		<controls:ActionButton styleName="statisticsButton" 
 			label="{resourceManager.getString('Application','editor_statistics')}"
-			labelPlacement="bottom"/>
+			labelPlacement="bottom"/>-->
 		
 			
 	</controls:ControlPanel>
