--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -25,7 +25,7 @@
 	<controls:ControlPanel 
 		width="100%" height="104"
 		paddingTop="7" paddingBottom="7" paddingLeft="7" paddingRight="7"
-		dropShadowEnabled="true"
+		dropShadowEnabled="true" verticalScrollPolicy="off"
 		horizontalAlign="left" verticalAlign="middle"
 		horizontalGap="5" borderStyle="solid" borderColor="#000000">
 		
